fixed everything